--- a/LearnIA/LearnIA/static/css/style.css
+++ b/LearnIA/LearnIA/static/css/style.css
@@ -166,6 +166,7 @@ strong {
   color: #ffffff;
 }
 
+
 #button-submit .btn {
     background: transparent;
     border: 3px solid #ffffff;
@@ -180,6 +181,40 @@ strong {
 }
 
 #button-submit .btn:hover {
+  background: #f1c11a;
+  color: #ffffff;
+  border-color: transparent;
+}
+
+/* submitButton-2 section */
+#button-submit-2 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+        align-items: center;
+  text-align: center;
+  color: #ffffff;
+}
+
+
+#button-submit-2 .btn {
+    background: transparent;
+    border: 3px solid #ffffff;
+    border-radius: 0px;
+    color: #ffffff;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-top: 42px;
+    margin-right: 16px;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+#button-submit-2 .btn:hover {
   background: #f1c11a;
   color: #ffffff;
   border-color: transparent;
@@ -279,6 +314,14 @@ strong {
 }
 
 #modal2{
+	background: url('../images/fondo_7.jpg') no-repeat;
+    width: fit-content;
+    height: fit-content;
+	overflow-y: auto;
+	
+}
+
+#modal3{
 	background: url('../images/fondo_7.jpg') no-repeat;
     width: fit-content;
     height: fit-content;
