--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -228,7 +228,7 @@
 							<option style="color: black" value="none" selected>Seleccione
 								una opción</option>
 							<option style="color: black" value="Sentimiento">Sentimiento</option>
-							<option style="color: black" value="Genero">Género</option>
+							<option style="color: black" value="Genero">Genero</option>
 						</select>
 					</div>
 				</div>
@@ -249,7 +249,7 @@
 						<select id="selectIterSent" class="form-control"
 							name="iteraccionSent">
 							<option style="color: black" selected disabled value="title">Iteracciones</option>
-							<option style="color: black" value="20">25</option>
+							<option style="color: black" value="25">25</option>
 							<option style="color: black" value="50">50</option>
 							<option style="color: black" value="100">100</option>
 						</select>
@@ -282,7 +282,7 @@
 						<select id="selectIterGen" class="form-control"
 							name="iteraccionGen">
 							<option style="color: black" selected disabled value="title">Iteracciones</option>
-							<option style="color: black" value="20">25</option>
+							<option style="color: black" value="25">25</option>
 							<option style="color: black" value="50">50</option>
 							<option style="color: black" value="100">100</option>
 						</select>
@@ -297,12 +297,12 @@
 						</select>
 					</div>
 				</div>
-				<section id="button-submit-2">
+				<section id="button-submit">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-thumb">
-									<button id="submit2" class="btn btn-warning">EJECUTAR</button>
+									<button id="submit" class="btn btn-warning">EJECUTAR</button>
 								</div>
 							</div>
 						</div>
