Solucionado problema botón Ejecutar - Imagen

--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -297,7 +297,7 @@
 						</select>
 					</div>
 				</div>
-				<section id="button-submit">
+				<section id="button-submit-2">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
