--- a/LearnIA/templates/base.html
+++ b/LearnIA/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en">
 {% load staticfiles %}
 <head>
-	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- 	<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}"> -->
 	<link rel="stylesheet" href="{% static "css/animate.min.css" %}">
 
   	<link rel="stylesheet" href="{% static "css/et-line-font.css" %}">
