Toolips en algunos botones

--- a/LearnIA/templates/image_graph.html
+++ b/LearnIA/templates/image_graph.html
@@ -276,7 +276,7 @@ function ValidateSubmit(){
 						</div>
 						<div class="col-md-6" id="chart_div3" style="height: 250px;">
 						</div>
-						<a ref="#" data-toggle="modal" data-target="#modal4" type="button"
+						<a ref="#" data-toggle="modal" title="Pulse aquí para ver una demostración con la configuración elegida anteriormente." data-target="#modal4" type="button"
 							class="btn btn-warning" id="text">Demo</a> 
 						<a href="/welcome/" type="button" class="btn btn-warning">Volver</a>
 			</div>
@@ -314,7 +314,7 @@ function ValidateSubmit(){
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-thumb">
-									<button id="submit" onsubmit="document.getElementById('submit').disabled=true;" class="btn btn-warning">EJECUTAR</button> 
+									<button id="submit"  data-toggle="modal" title="Pulse aquí para ejecutar una demsotración con la configuración elegida anteriormente." onsubmit="document.getElementById('submit').disabled=true;" class="btn btn-warning">EJECUTAR</button> 
 								</div>
 							</div>
 						</div>
