--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -432,7 +432,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-thumb">
-									<button id="submit" class="btn btn-warning">EJECUTAR</button>
+									<button  data-toggle="modal" title="Pulse aquí para ejecutar un análisis estadístico con la configuración elegida." id="submit" class="btn btn-warning">EJECUTAR</button>
 								</div>
 							</div>
 						</div>
