--- a/LearnIA/templates/text_graph.html
+++ b/LearnIA/templates/text_graph.html
@@ -231,7 +231,7 @@
 						</div>
 						<!--  <div class="col-md-6" id="chart_div4" style="height: 250px;">
 						</div> -->
-						<a ref="#" data-toggle="modal" data-target="#modal2" type="button"
+						<a ref="#" data-toggle="modal" data-target="#modal2" title="Pulse aquí para ver una demostración del algoritmo seleccionada con la configuración elegida anteriormente." type="button"
 							class="btn btn-warning" id="text">Demo</a> 
 						<a href="/welcome/" type="button" class="btn btn-warning">Volver</a>
 			</div>
@@ -276,7 +276,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-thumb">
-									<button id="submit" class="btn btn-warning">EJECUTAR</button> 
+									<button  data-toggle="modal" title="Pulse aquí para ejecutar una demostración del algoritmo seleccionada con la configuración elegida anteriormente." id="submit" class="btn btn-warning">EJECUTAR</button> 
 								</div>
 							</div>
 						</div>
