Estilos en vistas

--- a/LearnIA/templates/image_graph.html
+++ b/LearnIA/templates/image_graph.html
@@ -287,7 +287,7 @@ function ValidateSubmit(){
 
 <!-- modal -->
 
-
+<script src="/static/js/control_image2.js"></script>
 <div class="modal fade" id="modal4" tabindex="-1" role="dialog"
 	aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
