--- a/LearnIA/templates/text_demo.html
+++ b/LearnIA/templates/text_demo.html
@@ -10,12 +10,16 @@
 				<div class="home-thumb">
 					<h1 class="wow fadeInUp" style="font-weight: bold;"
 						data-wow-delay="0.8s">{{algoritmo}}</h1>
-					<h3 class="wow fadeInUp" data-wow-delay="0.6s"
-						style="font-weight: bold;">
-						<strong>{{prediccion}}</strong>
-						<br>
-						{{frase}}
-					</h3>
+					<div class="col-md-12">
+						<h3 class="wow fadeInUp" data-wow-delay="0.6s"
+							style="font-weight: bold;">
+							<strong>{{prediccion}}</strong>
+							<br>
+							
+								{{frase}}
+							
+						</h3>
+					</div>
 					<a href="/welcome/" type="button" class="btn btn-warning">INICIO</a>
 				</div>
 			</div>
