Añadida descripciones de parámetros

--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -341,9 +341,9 @@
 						</select>
 					</div>
 					<div class="col-xs-9" style="margin-left: 75px;">
-						<p id="simpleCNNSent" class="modal-title">Combinación1 de árboles predictores aaaaaaaaaaaa aa aaaaaaaa aaaa aaaaaa aa  aaaaaaaaa aaa aaaaaaaaa.</p>
-						<p id="miniXCNNSent" class="modal-title">Combinación2 de árboles predictores.</p>
-						<p id="bigXCNNSent" class="modal-title">Combinación3 de árboles predictores.</p>
+						<p id="simpleCNNSent" class="modal-title">Arquitectura simple de una Red Neuronal Convolucional compuesta por 6 capas convolutivas, intercalando entre ellas operaciones de función máxima(ReLU) y agrupación.</p>
+						<p id="miniXCNNSent" class="modal-title">Arquitectura basada en Xception, compuesta por 4 modulos donde se combinan convoluciones normales y convoluciones separables en profundidad. Tamaño máximo de los filtros = 128.</p>
+						<p id="bigXCNNSent" class="modal-title">Arquitectura basada en Xception, compuesta por 4 modulos donde se combinan convoluciones normales y convoluciones separables en profundidad. Tamaño máximo de los filtros = 256.</p>
 					</div>
 					<div class="col-xs-9" style="padding-top: 10px;">
 						<select id="selectOptimSent" class="form-control"
@@ -355,9 +355,9 @@
 						</select>
 					</div>
 					<div class="col-xs-9" style="margin-left: 75px;">
-						<p id="sgdSent" class="modal-title">Combinación1 de árboles predictores aaaaaaaaaaaa aa aaaaaaaa aaaa aaaaaa aa  aaaaaaaaa aaa aaaaaaaaa.</p>
-						<p id="rmsPropSent" class="modal-title">Combinación2 de árboles predictores.</p>
-						<p id="adamSent" class="modal-title">Combinación3 de árboles predictores.</p>
+						<p id="sgdSent" class="modal-title">Optimización del gradiente descendiente usado para minimizar la función objetivo que se define como una suma de funciones diferenciables. En otras palabras, SGD trata de encontrar mínimos o máximos por iteración.</p>
+						<p id="rmsPropSent" class="modal-title">Propone recuperar el concepto de amortiguar las fluctuaciones en el gradiente. Si en vez realizar una acumulación de gradientes esta vez realizamos la media móvil exponencial (EWMA), nos permite de manera automática descartar los valores más antiguos.</p>
+						<p id="adamSent" class="modal-title">Trata de solventar el problema con la fijación del ratio de aprendizaje del SGD, para ello adapta el ratio de aprendizaje en función de cómo estén distribuidos los parámetros. Si los parámetros están muy dispersos (sparse) el ratio de aprendizaje aumentará.</p>
 					</div>
 					<div class="col-xs-12" style="padding-top: 10px;">
 						<div class="col-xs-3" style="width: 50px; margin-left: 100px;">
@@ -391,9 +391,9 @@
 						</select>
 					</div>
 					<div class="col-xs-9" style="margin-left: 75px;">
-						<p id="simpleCNNGen" class="modal-title">Combinación1 de árboles predictores aaaaaaaaaaaa aa aaaaaaaa aaaa aaaaaa aa  aaaaaaaaa aaa aaaaaaaaa.</p>
-						<p id="miniXCNNGen" class="modal-title">Combinación2 de árboles predictores.</p>
-						<p id="bigXCNNGen" class="modal-title">Combinación3 de árboles predictores.</p>
+						<p id="simpleCNNGen" class="modal-title">Arquitectura simple de una Red Neuronal Convolucional compuesta por 6 capas convolutivas, intercalando entre ellas operaciones de función máxima(ReLU) y agrupación.</p>
+						<p id="miniXCNNGen" class="modal-title">Arquitectura basada en Xception, compuesta por 4 modulos donde se combinan convoluciones normales y convoluciones separables en profundidad. Tamaño máximo de los filtros = 128.</p>
+						<p id="bigXCNNGen" class="modal-title">Arquitectura basada en Xception, compuesta por 4 modulos donde se combinan convoluciones normales y convoluciones separables en profundidad. Tamaño máximo de los filtros = 256.</p>
 					</div>
 					<div class="col-xs-9" style="padding-top: 10px;">
 						<select id="selectOptimGen" class="form-control"
@@ -405,9 +405,9 @@
 						</select>
 					</div>
 					<div class="col-xs-9" style="margin-left: 75px;">
-						<p id="sgdGen" class="modal-title">Combinación1 de árboles predictores aaaaaaaaaaaa aa aaaaaaaa aaaa aaaaaa aa  aaaaaaaaa aaa aaaaaaaaa.</p>
-						<p id="rmsPropGen" class="modal-title">Combinación2 de árboles predictores.</p>
-						<p id="adamGen" class="modal-title">Combinación3 de árboles predictores.</p>
+						<p id="sgdGen" class="modal-title">Optimización del gradiente descendiente usado para minimizar la función objetivo que se define como una suma de funciones diferenciables. En otras palabras, SGD trata de encontrar mínimos o máximos por iteración.</p>
+						<p id="rmsPropGen" class="modal-title">Propone recuperar el concepto de amortiguar las fluctuaciones en el gradiente. Si en vez realizar una acumulación de gradientes esta vez realizamos la media móvil exponencial (EWMA), nos permite de manera automática descartar los valores más antiguos.</p>
+						<p id="adamGen" class="modal-title">Trata de solventar el problema con la fijación del ratio de aprendizaje del SGD, para ello adapta el ratio de aprendizaje en función de cómo estén distribuidos los parámetros. Si los parámetros están muy dispersos el ratio de aprendizaje aumentará.</p>
 					</div>
 					<div class="col-xs-12" style="padding-top: 10px;">
 						<div class="col-xs-3" style="width: 50px; margin-left: 100px;">
