Corrección de errores encontrados

--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -250,7 +250,7 @@
 
 					<div class="col-xs-12">
 						<div class="col-xs-3" style="width: 50px; margin-left: 100px;">
-	       					<a data-toggle="modal" class="my-btn" title="Determina en cuanto se divide el documento analizado, (2) Positivo y Negativo. (3) Positivo, Neutro y Negativo" href="#">
+	       					<a data-toggle="modal" class="my-btn" title="Parámetro de penalización C." href="#">
 		         				<span class="glyphicon glyphicon-info-sign"></span>
 		       				</a>
 	      				</div>	
